# PAOO

tema1/: CMakeLists.txt
tema1/inc/: car.h  carpark.h
tema1/src/: CMakeCache.txt  Makefile  car  car.cpp  carpark.cpp  cmake_install.cmake  main.cpp
